2007-05-01 Raphael Neider <rneider AT web.de>

	* device/lib/pic/libdev/*.c
	* device/include/pic/*.h: regenerated all device libs from updated
	  .inc files
	* support/scripts/inc2h.pl: documented usage, now uses strict to
	  catch more bugs

2007-04-30 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx:
	  fixed bug #1669175: Problem with space in output paths
	  documented how to use paths with spaces for Windows users

2007-04-29 Borut Razem <borut.razem AT siol.net>

	* Fixed svn:eol-style and svn:keywords properties
	* src/SDCCval.c: fixed bug
	  #1592871: Segfault with "large" const arrays of characters
	  replaced recursion with iteration
	* Removed svn:executable property from non-executable files

2007-04-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genRet): fixed bug 1707003

2007-04-27 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c (pBlockRemoveUnusedLabels,pic16_pBlockAddInval,
	  createReachingDefinitions,assignValnums,pic16_destructDF,
	  pic16_createDF,pic16_vcg_dumpedges,pic16_vcg_dump_default):
	  prevent NULL pointer dereferences
	* device/lib/pic/libdev/pic16f886.c,
	* device/lib/pic/libdev/pic16f887.c: svn mv'ed to disabled_* to
	  prevent building them, gputils do not really support them yet

2007-03-27 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/_ltoa.c: 36 bytes less __data mem. This really
	  helps printf_small. 32 bytes more __idata mem.

2007-04-27 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (addpCode2pBlock,LinkFlow,pBlockRemoveUnusedLabels):
	  return early when pb or pb->pcHead is NULL (patch #1708427)
	* src/regression/empty.c,
	* src/regression/Makefile: added test with empty functions
	* support/Util/SDCCerr.c: fixed typo in E_INIT_STRUCT message

2007-04-27 Borut Razem <borut.razem AT siol.net>

	* src/SDCCast.c: fixed feature request
	  #1547512: Redundant strings linked when using sizeof("abc")

2007-04-23 Borut Razem <borut.razem AT siol.net>
